fixed spacing issues

--- a/www/styles.css
+++ b/www/styles.css
@@ -79,6 +79,7 @@ h3 {
 .file-area-prompt {
     width: 100%;
     padding: 30px 0px;
+    padding-bottom: 10pt;
     padding-top: 4%;
     text-align: center;
     display: inline-block;
@@ -93,11 +94,17 @@ h3 {
 }
 
 .x-button {
+    margin-right: 0.4em;
     font-size: 12pt;
     background: none;
     border: none;
     appearance: none;
     float: right;
+}
+
+.file-previews {
+    margin-top: 0;
+    padding-top: 0;
 }
 
 .file-preview {
